add show serializer
